@@ -15,6 +15,8 @@
 - faster hist_find (Lovell Fuller)
 - webpload has a @shrink parameter for shrink-on-load
 - vipsthumbnail knows about webp shrink-on-load
+- more vips_resize() tuning, a bit quicker now
+- better behaviour for vips_cast() shift of non-int types (thanks apacheark)
 
 27/1/16 started 8.2.3
 - fix a crash with SPARC byte-order labq vips images
